[package]
name = "portmap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "client-legacy"] }
libc = "0.2"
ratatui = "0.28"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
